--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,46 +1,39 @@
-name: Build and Push Docker Image
+name: Docker Build and Push
 
 on:
-  release:
-    types: [created]
+ # push:
+ #   branches: [ "main" ]
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Tag Name'
-        required: true
+        description: 'Docker image tag'
+        default: 'latest'
+        type: string
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Set tag name
-      id: tag_name
-      run: |
-        if [ "${{ github.event_name }}" = "release" ]; then
-          echo "::set-output name=tag::${GITHUB_REF#refs/tags/}"
-        elif [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-          echo "::set-output name=tag::${{ github.event.inputs.tag }}"
-        fi
-
-    - name: Build and push Docker image with Release tag
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: |
-          vinlic/qwen-free-api:${{ steps.tag_name.outputs.tag }}
-          vinlic/qwen-free-api:latest
-        platforms: linux/amd64,linux/arm64
-        build-args: TARGETPLATFORM=${{ matrix.platform }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags:
+            ${{ secrets.DOCKERHUB_USERNAME }}/qwen-free-api:${{ github.event.inputs.tag }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
